# CPP-half-marathon

./: .gitignore  README.md
base/: CMakeLists.txt
base/simple_func/: main_arrays.cpp  main_class.cpp  main_f_s_stream.cpp  main_iterators.cpp  main_list.cpp  main_strings.cpp  main_template.cpp
base/template_list/: CMakeLists.txt  main_list_template.cpp
mylib/: mylib.h  mymap.h  myvector.h
sprint00/: error.txt
sprint00/t00/: CMakeLists.txt  helloTamriel.cpp
sprint00/t01/: CMakeLists.txt  main.cpp  printDialog.cpp  printDialog.h
sprint00/t02/: CMakeLists.txt  main.cpp  walletManager.cpp  walletManager.h
sprint00/t03/: CMakeLists.txt  castSpells.cpp  castSpells.h  main.cpp
sprint00/t04/: CMakeLists.txt  main.cpp  referenceOrPointer.cpp  referenceOrPointer.h
sprint00/t05/: CMakeLists.txt  main.cpp
sprint00/t06/: CMakeLists.txt  main.cpp  meadSong  meadSong.cpp
sprint00/t07/: CMakeLists.txt  main.cpp
sprint00/t07/src/: inventory.cpp  inventory.h
sprint01/: error.txt
sprint01/t00/: CMakeLists.txt  main.cpp
sprint01/t00/src/: f.cpp  function.cpp  header.h  mytemplates.h
sprint01/t01/: CMakeLists.txt  main.cpp
sprint01/t01/src/: f.cpp  functions.cpp  header.h
sprint01/t02/: CMakeLists.txt  main.cpp  visitAll
sprint01/t02/src/: CMakeLists.txt  header.h  parse.cpp  printerr.cpp
sprint01/t03/: CMakeLists.txt  main.cpp  vampireRabbits
sprint01/t03/src/: header.h  init.cpp  mylib.h
sprint01/t04/: CMakeLists.txt  main.cpp  names.txt  stdAlgoV1
sprint01/t04/src/: CMakeLists.txt  func.cpp  header.h
sprint01/t05/: CMakeLists.txt  main.cpp
sprint01/t05/examples/: test1
sprint01/t05/src/: files.cpp  func.cpp  header.h
sprint02/: error.txt
sprint02/t00/: CMakeLists.txt  main.cpp
sprint02/t00/src/: CMakeLists.txt  files.cpp  header.h
sprint02/t00/test/: 1  1_ex
sprint02/t01/: CMakeLists.txt  main.cpp
sprint02/t01/src/: files.cpp  header.h
sprint02/t01/test/: 1ex
sprint02/t02/: CMakeLists.txt  main.cpp
sprint02/t02/src/: CMakeLists.txt  files.cpp  func.cpp  header.h
sprint02/t03/: CMakeLists.txt  main.cpp
sprint02/t03/examples/: 1  2
sprint02/t03/src/: files.cpp  func.cpp  header.h
sprint03/: error.txt
sprint03/t00/: CMakeLists.txt  main.cpp  templateAddition.h
sprint03/t01/: main  main.cpp  outputAny.h
sprint03/t02/: CMakeLists.txt  main  main.cpp  sumOfArguments.h
sprint03/t03/: main.cpp  sumFileData.h
sprint03/t03/test/: 2
sprint03/t04/: main  main.cpp  outputContainer.h
sprint03/t05/: main  main.cpp  squareValue.h
sprint03/t06/: isPalindrome.h  main  main.cpp
sprint03/t07/: main  main.cpp  sortValues.h
sprint04/: error.txt
sprint04/t00/: CMakeLists.txt  main
sprint04/t00/app/: CMakeLists.txt  main.cpp  main1.cpp
sprint04/t00/utils/: CMakeLists.txt  algorithmUtils.h
sprint04/t01/: CMakeLists.txt
sprint04/t01/app/: CMakeLists.txt  main.cpp
sprint04/t01/app/src/: Axe.cpp  CMakeLists.txt  ImperialSoldier.cpp  ImperialSoldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h
sprint04/t02/: CMakeLists.txt  dragonborn
sprint04/t02/app/: CMakeLists.txt  main.cpp
sprint04/t02/app/src/: dragonborn.cpp  dragonborn.h
sprint04/t03/: CMakeLists.txt  dwemerCalculator
sprint04/t03/app/: CMakeLists.txt  main.cpp
sprint04/t03/app/src/: CMakeLists.txt  dwemerCalculator.cpp  dwemerCalculator.h
sprint05/: error.txt
sprint05/t00/app/: CMakeLists.txt  main.cpp
sprint05/t01/: CMakeLists.txt
sprint05/t01/app/: CMakeLists.txt  main.cpp
sprint05/t01/app/src/: draugr.cpp  draugr.h
sprint05/t02/app/: main.cpp
sprint05/t03/: CMakeLists.txt
sprint05/t03/app/: main.cpp
sprint05/t04/: CMakeLists.txt
sprint05/t04/app/: CMakeLists.txt  main.cpp
sprint06/: 100_success.txt
sprint06/t00/: CMakeLists.txt  test
sprint06/t00/app/: CMakeLists.txt
sprint06/t00/app/src/: CMakeLists.txt
sprint06/t00/app/src/Food/: ApplePie.h  CMakeLists.txt  HoneyNut.h  PoisonedFood.h  SweetRoll.h
sprint06/t00/app/src/Wizard/: CMakeLists.txt
sprint06/t01/: CMakeLists.txt  test
sprint06/t01/app/: CMakeLists.txt
sprint06/t01/app/src/: CMakeLists.txt
sprint06/t01/app/src/Containers/: Barrel.cpp  CMakeLists.txt  Chest.cpp  LockpickDifficulty.h  Safe.cpp
sprint06/t01/app/src/Interfaces/: CMakeLists.txt
sprint06/t01/app/src/Player/: CMakeLists.txt
sprint06/t02/: CMakeLists.txt  my
sprint06/t02/app/: CMakeLists.txt  main.cpp
sprint06/t02/app/src/: CMakeLists.txt
sprint06/t02/app/src/Creatures/: CMakeLists.txt  Creature.cpp  Creature.h  Imperial.cpp  Imperial.h  Redguard.cpp  Redguard.h
sprint06/t02/app/src/Spells/: CMakeLists.txt  EquilibriumSpell.cpp  EquilibriumSpell.h  FireballSpell.cpp  FireballSpell.h  FlamesSpell.cpp  FlamesSpell.h  FreezeSpell.cpp  FreezeSpell.h  HealingSpell.cpp  HealingSpell.h  ISpell.cpp  ISpell.h
sprint07/: error.txt  main_template00.cpp  main_template01.cpp
sprint07/t00/app/: CMakeLists.txt  main.cpp
sprint07/t00/utils/: mylib.h
sprint07/t01/: CMakeLists.txt
sprint07/t01/app/: CMakeLists.txt  main.cpp
sprint07/t01/utils/: CMakeLists.txt
sprint08/: error.c
sprint08/t00/: CMakeLists.txt
sprint08/t00/app/: CMakeLists.txt  main.cpp
sprint08/t01/: CMakeLists.txt
sprint08/t01/app/: CMakeLists.txt
sprint08/t02/: CMakeLists.txt
sprint08/t02/app/: CMakeLists.txt
sprint08/t03/: CMakeLists.txt
sprint08/t03/app/: CMakeLists.txt
sprint08/t04/: CMakeLists.txt
sprint08/t04/app/: CMakeLists.txt  main.cpp
sprint09/: error.c
sprint09/t00/: CMakeLists.txt
sprint09/t00/app/: CMakeLists.txt  main.cpp
sprint09/t01/: CMakeLists.txt
sprint09/t01/app/: CMakeLists.txt  main.cpp
sprint09/t02/: 2  CMakeLists.txt
sprint09/t02/app/: CMakeLists.txt  main.cpp
sprint09/t03/: CMakeLists.txt
sprint09/t03/app/: CMakeLists.txt  main.cpp
sprint09/t04/: CMakeLists.txt
sprint09/t04/app/: CMakeLists.txt
sprint09/t05/: CMakeLists.txt
sprint09/t05/app/: CMakeLists.txt  main.cpp
sprint09/t06/: CMakeLists.txt
sprint09/t06/app/: CMakeLists.txt  main.cpp
theory/: CMakeLists.txt  class.cpp  linked_list.h
(+53 files in other folders)
